--- a/environment.yml
+++ b/environment.yml
@@ -3,25 +3,11 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - ca-certificates=2020.4.5.1=hecc5488_0
-  - certifi=2020.4.5.1=py38h32f6830_0
-  - intel-openmp=2020.0=166
-  - libblas=3.8.0=15_mkl
-  - libcblas=3.8.0=15_mkl
-  - liblapack=3.8.0=15_mkl
-  - mkl=2020.0=166
-  - numpy=1.18.1=py38ha749109_1
-  - openssl=1.1.1f=hfa6e2cd_0
-  - pandas=1.0.3=py38hbe40bda_0
-  - pip=20.0.2=py_2
-  - python=3.8.2=h5fd99cc_5_cpython
-  - python-dateutil=2.8.1=py_0
-  - python_abi=3.8=1_cp38
-  - pytz=2019.3=py_0
-  - setuptools=46.1.3=py38h32f6830_0
-  - six=1.14.0=py_1
-  - sqlite=3.30.1=hfa6e2cd_0
-  - vc=14.1=h869be7e_1
-  - vs2015_runtime=14.16.27012=h30e32a0_1
-  - wheel=0.34.2=py_1
-  - wincertstore=0.2=py38_1003
+  - keras=2.3.1
+  - numpy=1.18.1
+  - pandas=1.0.3
+  - pytest=5.4.1
+  - python=3.8.2
+  - setuptools=46.1.3
+  - scikit-learn=0.22.2
+  - tensorflow-gpu=2.1.0
