--- a/environment.yml
+++ b/environment.yml
@@ -3,11 +3,18 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - keras=2.3.1
+  - ipython=7.13.0
+  - jupyter=1.0.0
+  - jupyter_core=4.6.3
+  - matplotlib=3.2.1
   - numpy=1.18.1
+  - notebook=6.0.3
   - pandas=1.0.3
+  - pip
   - pytest=5.4.1
-  - python=3.8.2
+  - python=3.7.1
   - setuptools=46.1.3
   - scikit-learn=0.22.2
   - tensorflow-gpu=2.1.0
+  - pip:
+      -keras==2.3.1
